--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prettier": "2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.4.0",
     "vite-plugin-checker": "0.5.1"
   },
   "devDependencies": {
